--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <div class="row member-list">
                 <div class=" col col-third s-col-full mt-16 text-center">
                     <p class="member-name">Name</p>
-                    <img src="/assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
+                    <img src="./assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
                 </div>
                 <div class=" col col-third s-col-full mt-16 text-center">
                     <p class="member-name">Name</p>
-                    <img src="/assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
+                    <img src="./assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
                 </div>
                 <div class=" col col-third s-col-full mt-16 text-center">
                     <p class="member-name">Name</p>
-                    <img src="/assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
+                    <img src="./assets/img/conten/bandmember.jpg" alt="Name" class="member-img">
                 </div>
             </div>
         </div>
